# Scraper-tool

flight-harvester/backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  railway.toml
flight-harvester/backend/alembic/: env.py
flight-harvester/backend/alembic/versions/: 0b2f4d5cbeb7_initial_schema.py  a1b2c3d4e5f6_add_currency_stops_dates.py  b2c3d4e5f6a7_fix_daily_cheapest_unique_constraint.py  c3d4e5f6a7b8_add_search_profiles_legs_prices.py  d1e2f3a4b5c6_add_user_id_to_profiles_and_groups.py  e2f3a4b5c6d7_add_all_flight_results.py  e8f3a1b2c4d5_add_stops_duration.py  f1a2b3c4d5e6_cleanup_removed_features.py
flight-harvester/backend/app/: main.py
flight-harvester/backend/app/api/: deps.py
flight-harvester/backend/app/core/: app_factory.py  config.py  logging.py  security.py
flight-harvester/backend/app/db/: health.py  session.py
flight-harvester/backend/app/models/: __init__.py  all_flight_result.py  collection_run.py  daily_cheapest.py  flight_price.py  route_group.py  scrape_log.py  search_leg.py  search_profile.py  user.py
flight-harvester/backend/app/providers/: __init__.py  base.py  flightapi.py  kiwi.py  mock.py  registry.py  serpapi.py  serper.py  travelpayouts.py
flight-harvester/backend/app/schemas/: auth.py  daily_price.py  health.py  route_group.py  search_profile.py  stats.py
flight-harvester/backend/app/scripts/: seed_route_groups.py
flight-harvester/backend/app/services/: alert_service.py  auth_service.py  (+5 more)
flight-harvester/backend/tests/: conftest.py  test_airline_codes.py  test_auth_schema.py  test_config.py
(+171 files in other folders)
